--- a/site_vitrine/a_propos.html
+++ b/site_vitrine/a_propos.html
@@ -20,7 +20,7 @@
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="a_propos.html">A-propos</a>
-        <a href="#">Services</a>
+        <a href="Service.html">Services</a>
         <a href="Contact.html">Contact</a>
     </div>
     <h1>A-Propos 🗨️</h1>
