--- a/site_vitrine/accueil.html
+++ b/site_vitrine/accueil.html
@@ -20,9 +20,11 @@
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="a_propos.html">A-propos</a>
-        <a href="#">Services</a>
+        <a href="Service.html">Services</a>
         <a href="Contact.html">Contact</a>
     </div>
+    <center><p>Bonjour à vous, bienvenu sur notre site vitrine.</p></center>
+    <center><p>Ce site est à votre service pour vous aider à trouver votre sport de prédilection, on vous explique comment y jouer et les lieux où vous pouvez exercer votre sport.</p></center>
     <div class="slideshow-container">
 
       <!-- Full-width images with number and caption text -->
